Convert json to csv and save it in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,9 @@
     <div>
       <form action="/" method="POST" name="form-name" enctype="application/json">
         <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"></textarea>
-        <input type="submit" value="Submit" onclick=prettyPrint()></input>
+        <input type="submit" value="Submit"></input>
       </form>
-      <div id="csv-report">
-      </div>
+      <textarea id="textarea-json" name="textarea-json" rows="20" cols="20">firstName,lastName,county,city,role,sales,Joshie,Wyattson,San Mateo,San Mateo,Broker,1000000,Beth Jr.,Johnson,San Mateo,Pacifica,Manager,2900000,Smitty,Won,San Mateo,Redwood City,Sales Person,4800000,Allen,Price,San Mateo,Burlingame,Sales Person,2500000,Beth,Johnson,San Francisco,San Francisco,Broker/Sales Person,7500000</textarea>
     </div>
   </body>
 </html>
