--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,11 @@
   <body>
     <div>
       <form action="/" method="POST" name="form-name" enctype="application/json">
-        <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"></textarea>
-        <input type="submit" value="Submit"></input>
+        <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--json--></textarea>
+        <input type="submit" value="Convert"></input>
       </form>
-      <textarea id="textarea-json" name="textarea-json" rows="20" cols="20">firstName,lastName,county,city,role,sales,Joshie,Wyattson,San Mateo,San Mateo,Broker,1000000,Beth Jr.,Johnson,San Mateo,Pacifica,Manager,2900000,Smitty,Won,San Mateo,Redwood City,Sales Person,4800000,Allen,Price,San Mateo,Burlingame,Sales Person,2500000,Beth,Johnson,San Francisco,San Francisco,Broker/Sales Person,7500000</textarea>
+      <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--csv--></textarea>
     </div>
+    <script src="server.js"></script>
   </body>
 </html>
