Complete CSV Report Generator

--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,12 @@
   <body>
     <div>
       <form action="/" method="POST" name="form-name" enctype="application/json">
-        <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--json--></textarea>
+        <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"></textarea>
         <input type="submit" value="Convert"></input>
       </form>
-      <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--csv--></textarea>
+      <textarea id="textarea-csv" name="textarea-csv" rows="20" cols="20"></textarea>
     </div>
-    <script src="server.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src='client.js'></script>
   </body>
 </html>
